--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,11 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid saddlebrown;
 
   .box {
-    width: 99vh;
+    width: 74vh;
     height: 99vh;
-    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .bg {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
