--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
   justify-content: center;
 
   .box {
+    position: relative;
     width: 74vh;
     height: 99vh;
     display: flex;
@@ -12,6 +13,20 @@
     .bg {
       width: 100%;
       height: 100%;
+    }
+    .chouchoule {
+      position: absolute;
+      top: 10vh;
+      left: 33vh;
+      width: 30vh;
+      height: auto;
+    }
+    .tongsouwuqi {
+      position: absolute;
+      top: 47.5vh;
+      left: 23vh;
+      width: 28vh;
+      height: auto;
     }
   }
 }
