--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+    font-family: 'Belwe Bd BT';
+    font-weight: bold;
+    font-style: normal;
 }
 
 .hidden {
@@ -113,7 +116,9 @@ body {
 }
 
 .odometer.odometer-auto-theme, .odometer.odometer-theme-default {
-  font-family: "Helvetica Neue", sans-serif;
+    font-family: 'Belwe Bd BT';
+    font-weight: bold;
+    font-style: normal;
   line-height: 1.1em;
 }
 
